--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,13 +7,13 @@
 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="1500">
-      <img src="https://cdn.photographylife.com/wp-content/uploads/2017/01/What-is-landscape-photography.jpg" class="d-block w-100" alt="...">
+      <img src="https://image.toast.com/aaaaab/ticketlink/TKL_8/TopBanner_%EB%B9%84%EC%8A%A4%ED%8B%B0.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item" data-bs-interval="1500">
-      <img src="https://item.kakaocdn.net/do/9fc764ca0704ce3ebaba47c50f8b7e8f617ea012db208c18f6e83b1a90a7baa7" class="d-block w-100" alt="...">
+      <img src="https://image.toast.com/aaaaab/ticketlink/TKL_5/TopBanner_%EB%A0%88%EB%93%9C%EB%B6%81.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item" data-bs-interval="1500">
-      <img src="https://item.kakaocdn.net/do/96e7959eb631928b9df544c27ef9029a9f5287469802eca457586a25a096fd31" class="d-block w-100" alt="...">
+      <img src="https://image.toast.com/aaaaab/ticketlink/TKL_6/TopBanner_PC_%EC%9B%90%ED%94%BD.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
