--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,10 @@
   </style>
 </head>
 <body>
-<h1><a href="/neticket" style="text-decoration: none;color: black;">NETicket</a></h1>
+<a href="/neticket">
+  <img src="/images/logo2.png" alt="NETicket"
+       style="width: 150px; object-fit: contain; margin-top: 30px; margin-left: 70px;">
+</a>
 <div id="login-form">
   <h2>LOGIN</h2>
   <div class="mb-3">
