--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -74,7 +74,10 @@
 </head>
 <body>
 <div class="">
-  <h1 style="margin-bottom: 70px; margin-top: 100px;">NETicket</h1>
+  <a href="/neticket">
+    <img src="/images/logo2.png" alt="NETicket"
+         style="width: 150px; object-fit: contain; margin-top: 30px; margin-left: 70px;">
+  </a>
   <div id="wrap">
     <div id="login-form">
       <form>
