--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -13,6 +13,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
         rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nanum Pen Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Gowun Dodum&display=swap" rel="stylesheet">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
@@ -26,7 +29,6 @@
   <script type="text/javascript" th:src="@{/js/basic.js}"></script>
 
   <title>페이지</title>
-
 </head>
 <body>
 </body>
