--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -3,42 +3,93 @@
 <head th:replace="header :: head"></head>
 <body>
 <div th:replace="navbar :: navbar"></div>
-  <div class="image-container" style="margin-left: 150px; margin-top: 50px">
-    <img class="image"
-         src="" alt=""
-         width="100%" HEIGHT="70%">
+
+<section class="py-5">
+  <div class="container px-4 px-lg-5 my-5">
+    <div class="row gx-4 gx-lg-5 align-items-start">
+      <div class="col-md-6">
+        <div class="image-container">
+          <img class="card-img-top mb-5 mb-md-0 image" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..." width="100%" height="70%" />
+        </div>
+      </div>
+      <div class="col-md-6">
+        <h5 class="infoDesc id" style="overflow: hidden"></h5>
+        <h5 class="reservation-header">예매중페이지</h5>
+        <ul class="info">
+          <section class="infoSection">
+            <li class="infoItem">
+              <strong class="infoLabel">제목</strong>
+              <div class="infoDesc title"></div>
+            </li>
+            <li class="infoItem">
+              <strong class="infoLabel">장소</strong>
+              <div class="infoDesc place"></div>
+            </li>
+            <li class="infoItem">
+              <strong class="infoLabel">공연 날짜</strong>
+              <div class="infoDesc date"></div>
+            </li>
+            <li class="infoItem">
+              <strong class="infoLabel">가격</strong>
+              <div class="infoDesc price"></div>
+            </li>
+          </section>
+          <section class="infoSection">
+            <li class="infoItem">
+              <select name="ticketCount" id="ticketCount">
+                <option value="1">1장</option>
+                <option value="2">2장</option>
+                <option value="3">3장</option>
+                <option value="4">4장</option>
+              </select>
+            </li>
+            <li class="infoItem">
+              <button id="bookingButton" onclick="saveReservation()">예매하기</button>
+            </li>
+          </section>
+        </ul>
+      </div>
+    </div>
   </div>
-  <h5 class="infoDesc id" , style="overflow: hidden"></h5>
-  <ul class="info" style="margin-top: 100px; margin-left: 100px">
-    <section class="infoSection">
-      <li class="infoItem">
-        <strong class="infoLabel">제목</strong>
-        <div class="infoDesc title"></div>
-      </li>
-      <li class="infoItem">
-        <strong class="infoLabel">장소</strong>
-        <div class="infoDesc place"></div>
-      </li>
-      <li class="infoItem">
-        <strong class="infoLabel">공연 날짜</strong>
-        <div class="infoDesc date"></div>
-      </li>
-      <li class="infoItem">
-        <strong class="infoLabel">가격</strong>
-        <div class="infoDesc price"></div>
-      </li>
-    </section>
-    <section class="infoSection">
-      <select name="ticketCount" id="ticketCount">
-        <option value="1">1장</option>
-        <option value="2">2장</option>
-        <option value="3">3장</option>
-        <option value="4">4장</option>
-      </select>
-      <button id="bookingButton" onclick="saveReservation()">예매하기</button>
-    </section>
-  </ul>
-</div>
+</section>
+
+
+<!--  <div class="image-container" style="margin-left: 150px; margin-top: 50px">-->
+<!--    <img class="image"-->
+<!--         src="" alt=""-->
+<!--         width="100%" HEIGHT="70%">-->
+<!--  </div>-->
+<!--  <h5 class="infoDesc id" , style="overflow: hidden"></h5>-->
+<!--  <ul class="info" style="margin-top: 100px; margin-left: 100px">-->
+<!--    <section class="infoSection">-->
+<!--      <li class="infoItem">-->
+<!--        <strong class="infoLabel">제목</strong>-->
+<!--        <div class="infoDesc title"></div>-->
+<!--      </li>-->
+<!--      <li class="infoItem">-->
+<!--        <strong class="infoLabel">장소</strong>-->
+<!--        <div class="infoDesc place"></div>-->
+<!--      </li>-->
+<!--      <li class="infoItem">-->
+<!--        <strong class="infoLabel">공연 날짜</strong>-->
+<!--        <div class="infoDesc date"></div>-->
+<!--      </li>-->
+<!--      <li class="infoItem">-->
+<!--        <strong class="infoLabel">가격</strong>-->
+<!--        <div class="infoDesc price"></div>-->
+<!--      </li>-->
+<!--    </section>-->
+<!--    <section class="infoSection">-->
+<!--      <select name="ticketCount" id="ticketCount">-->
+<!--        <option value="1">1장</option>-->
+<!--        <option value="2">2장</option>-->
+<!--        <option value="3">3장</option>-->
+<!--        <option value="4">4장</option>-->
+<!--      </select>-->
+<!--      <button id="bookingButton" onclick="saveReservation()">예매하기</button>-->
+<!--    </section>-->
+<!--  </ul>-->
+<!--</div>-->
 </body>
 <script>
   $(document).ready(function () {
