--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -50,8 +50,8 @@
 
   button {
     border-radius: 20px;
-    border: 1px solid #FF4B2B;
-    background-color: #FF4B2B;
+    border: 1px solid #f14646;
+    background-color: #ec4a4a;
     color: #FFFFFF;
     font-size: 12px;
     font-weight: bold;
