--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -9,47 +9,45 @@
     <div class="row gx-4 gx-lg-5 align-items-start">
       <div class="col-md-6">
         <div class="image-container">
-          <img class="image" src="" alt="" width="100%" height="70%" />
+          <img class="image" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt=""/>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="card reservation-card" id="getresv">
-          <ul class="info">
-            <h5 class="reservation-header">예매완료</h5>
-            <li class="reservation-info-item">
-              <strong class="reservation-info-label">예매 번호 : </strong>
-              <div class="infoDesc id" id="resvId"></div>
-            </li>
-            <li class="reservation-info-item">
-              <strong class="reservation-info-label">공연 제목 : </strong>
-              <div class="infoDesc title"></div>
-            </li>
-            <li class="reservation-info-item">
-              <strong class="reservation-info-label">공연 장소 : </strong>
-              <div class="infoDesc place">
-                <p class="reservation-info-text"></p>
-              </div>
-            </li>
-            <li class="reservation-info-item">
-              <strong class="reservation-info-label">공연 날짜 : </strong>
-              <div class="infoDesc date">
-                <p class="reservation-info-text"></p>
-              </div>
-            </li>
-            <li class="reservation-info-item">
-              <strong class="reservation-info-label">가격 : </strong>
-              <div class="infoDesc totalPrice">
-                <p class="reservation-info-text"></p>
-              </div>
-            </li>
-            <li class="reservation-info-item">
-              <strong class="reservation-info-label">매수 : </strong>
-              <div class="infoDesc count">
-                <p class="reservation-info-text"></p>
-              </div>
-            </li>
-          </ul>
-        </div>
+        <h5 class="reservation-header">예매완료</h5>
+        <ul class="info">
+          <li class="reservation-info-item">
+            <strong class="reservation-info-label">예매 번호 : </strong>
+            <div class="infoDesc id" id="resvId"></div>
+          </li>
+          <li class="reservation-info-item">
+            <strong class="reservation-info-label">공연 제목 : </strong>
+            <div class="infoDesc title"></div>
+          </li>
+          <li class="reservation-info-item">
+            <strong class="reservation-info-label">공연 장소 : </strong>
+            <div class="infoDesc place">
+              <p class="reservation-info-text"></p>
+            </div>
+          </li>
+          <li class="reservation-info-item">
+            <strong class="reservation-info-label">공연 날짜 : </strong>
+            <div class="infoDesc date">
+              <p class="reservation-info-text"></p>
+            </div>
+          </li>
+          <li class="reservation-info-item">
+            <strong class="reservation-info-label">가격 : </strong>
+            <div class="infoDesc totalPrice">
+              <p class="reservation-info-text"></p>
+            </div>
+          </li>
+          <li class="reservation-info-item">
+            <strong class="reservation-info-label">매수 : </strong>
+            <div class="infoDesc count">
+              <p class="reservation-info-text"></p>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
