--- a/src/main/resources/templates/addevent.html
+++ b/src/main/resources/templates/addevent.html
@@ -54,7 +54,7 @@
           <label for="image">이미지</label>
           <input type="file" class="form-control-file" id="image" name="image">
         </div>
-        <button type="submit" class="btn btn-primary" id="saveButton">저장</button>
+        <button type="submit" class="btn" id="saveButton">저장</button>
       </form>
       </form>
     </div>
