Design: 전체 HTML, CSS 개선
Related to: #69

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -14,7 +14,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
         rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Nanum Pen Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nanum Pen Script&display=swap"
+        rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Gowun Dodum&display=swap" rel="stylesheet">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
