--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -9,7 +9,9 @@
     <div class="row gx-4 gx-lg-5 align-items-start">
       <div class="col-md-6">
         <div class="image-container">
-          <img class="card-img-top mb-5 mb-md-0 image" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..." width="100%" height="70%" />
+          <img class="card-img-top mb-5 mb-md-0 image"
+               src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..." width="100%"
+               height="70%"/>
         </div>
       </div>
       <div class="col-md-6">
