--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,76 +1,76 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="header :: head"></head>
-  <style>
+<style>
 
-    body {
-      background-color: #f5f5f5;
-    }
+  body {
+    background-color: #f5f5f5;
+  }
 
-    #wrap {
-      max-width: 600px;
-      margin: 50px auto;
-      background-color: #fff;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      padding: 30px;
-    }
+  #wrap {
+    max-width: 600px;
+    margin: 50px auto;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+  }
 
-    h1 {
-      margin-top: 30px;
-      text-align: center;
-      font-size: 36px;
-      color: #333;
-      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
-    }
+  h1 {
+    margin-top: 30px;
+    text-align: center;
+    font-size: 36px;
+    color: #333;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+  }
 
-    h2 {
-      margin-top: 50px;
-      font-size: 24px;
-      color: #333;
-      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
-    }
+  h2 {
+    margin-top: 50px;
+    font-size: 24px;
+    color: #333;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+  }
 
-    form {
-      margin-top: 30px;
-    }
+  form {
+    margin-top: 30px;
+  }
 
-    .form-control {
-      border: none;
-      border-radius: 0;
-      box-shadow: none;
-      border-bottom: 1px solid #ccc;
-    }
+  .form-control {
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+    border-bottom: 1px solid #ccc;
+  }
 
-    .form-control:focus {
-      box-shadow: none;
-      border-color: #6c757d;
-    }
+  .form-control:focus {
+    box-shadow: none;
+    border-color: #6c757d;
+  }
 
-    .form-check-input:checked ~ .form-check-label:before {
-      color: #007bff;
-    }
+  .form-check-input:checked ~ .form-check-label:before {
+    color: #007bff;
+  }
 
-    .btn-primary {
-      background-color: #007bff;
-      border-color: #007bff;
-    }
+  .btn-primary {
+    background-color: #007bff;
+    border-color: #007bff;
+  }
 
-    .btn-primary:hover {
-      background-color: #0069d9;
-      border-color: #0062cc;
-    }
+  .btn-primary:hover {
+    background-color: #0069d9;
+    border-color: #0062cc;
+  }
 
-    .btn-primary:focus {
-      box-shadow: none;
-    }
+  .btn-primary:focus {
+    box-shadow: none;
+  }
 
-    .btn-primary:active {
-      background-color: #0062cc;
-      border-color: #005cbf;
-    }
+  .btn-primary:active {
+    background-color: #0062cc;
+    border-color: #005cbf;
+  }
 
-  </style>
+</style>
 </head>
 <body>
 <div class="">
@@ -95,7 +95,8 @@
         <div class="mb-3">
           <label class="form-label">비밀번호 확인</label>
           <div class="input-group">
-            <input type="password" id="passwordCheck" class="form-control" placeholder="비밀번호를 한번 더 입력해주세요.">
+            <input type="password" id="passwordCheck" class="form-control"
+                   placeholder="비밀번호를 한번 더 입력해주세요.">
           </div>
         </div>
         <div class="mb-3">
