Design: 예매완료 response time 위치 변경
Related to: #69

--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -3,7 +3,6 @@
 <head th:replace="header :: head"></head>
 <body>
 <div th:replace="navbar :: navbar"></div>
-<p id="responseTime"></p>
 <section class="py-5">
   <div class="container px-4 px-lg-5 my-5">
     <div class="row gx-4 gx-lg-5 align-items-start">
@@ -48,6 +47,7 @@
             </div>
           </li>
         </ul>
+        <p style="margin-top: 30px; margin-left: 190px" id="responseTime"></p>
       </div>
     </div>
   </div>
