Feat : reset키 구현
admin이 서버 시작할때 오늘 날짜에 맞춰 isAvailable 재설정하는 reset 로직 구현
위의 reset버튼 프론트 admin 페이지에도 구현
TicketInfoService에서 스케쥴러가 사용할 db 쿼리 구현
redisRepository 에서 메서드 예외처리 수정

Related to: #80

--- a/src/main/resources/templates/addevent.html
+++ b/src/main/resources/templates/addevent.html
@@ -6,6 +6,7 @@
 <div class="row">
   <div class="event-form-container">
     <form id="eventForm" method="post" enctype="multipart/form-data">
+      <button type="button" class="btn btn-dark" id="resetButton" onclick="resetTicketInfo()">리셋</button>
       <div class="input-group">
         <select class="form-select" id="inputGroupSelect04"
                 aria-label="Example select with button addon">
