--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -29,7 +29,7 @@
 </body>
 <script>
   $(document).ready(function () {
-    showSearchResult();
+    showSearchResult(1);
 
     const authToken = getCookie('Authorization');
 
