--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -4,6 +4,8 @@
 <body>
 <div th:replace="navbar :: navbar"></div>
 
+<h3>응답속도 : ms</h3>
+
 <div id="event_box" class="row"
      style="margin-left: 50px; margin-top: 50px; margin-right: 20px"></div>
 
