--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -146,7 +146,8 @@ footer {
 
 .image{
   width: 100%;
-  height: 500px;
+  height: 100%;
+  object-fit: contain;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
