--- a/src/main/resources/templates/addevent.html
+++ b/src/main/resources/templates/addevent.html
@@ -44,7 +44,7 @@
         <input type="number" class="form-control" id="price" name="price" placeholder="가격을 입력하세요">
       </div>
       <div class="form-group">
-        <label for="date">날짜</label>
+        <label for="date">공연일</label>
         <input type="date" class="form-control" id="date" name="date">
       </div>
       <div class="form-group">
