--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -3,117 +3,306 @@
 <head th:replace="header :: head"></head>
 <style>
 
-  body {
-    background-color: #f5f5f5;
+  @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+
+  * {
+    box-sizing: border-box;
   }
 
-  #wrap {
-    max-width: 600px;
-    margin: 50px auto;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 30px;
+  body {
+    background: #F6F5F7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Montserrat', sans-serif;
+    height: 100vh;
+    margin: -20px 0 50px;
   }
 
   h1 {
-    margin-top: 30px;
-    text-align: center;
-    font-size: 36px;
-    color: #333;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+    font-weight: bold;
+    margin: 0;
   }
 
   h2 {
-    margin-top: 50px;
-    font-size: 24px;
+    text-align: center;
+  }
+
+  p {
+    font-size: 14px;
+    font-weight: 100;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+    margin: 20px 0 30px;
+  }
+
+  span {
+    font-size: 12px;
+  }
+
+  a {
     color: #333;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+    font-size: 14px;
+    text-decoration: none;
+    margin: 15px 0;
+  }
+
+  button {
+    border-radius: 20px;
+    border: 1px solid #f14646;
+    background-color: #ec4a4a;
+    color: #FFFFFF;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+  }
+
+  button:active {
+    transform: scale(0.95);
+  }
+
+  button:focus {
+    outline: none;
+  }
+
+  button.ghost {
+    background-color: transparent;
+    border-color: #FFFFFF;
   }
 
   form {
-    margin-top: 30px;
+    background-color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 50px;
+    height: 100%;
+    text-align: center;
   }
 
-  .form-control {
+  input {
+    background-color: #eee;
     border: none;
-    border-radius: 0;
-    box-shadow: none;
-    border-bottom: 1px solid #ccc;
+    padding: 12px 15px;
+    margin: 8px 0;
+    width: 100%;
   }
 
-  .form-control:focus {
-    box-shadow: none;
-    border-color: #6c757d;
+  .container {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+    0 10px 10px rgba(0, 0, 0, 0.22);
+    position: relative;
+    overflow: hidden;
+    width: 768px;
+    max-width: 100%;
+    min-height: 480px;
   }
 
-  .form-check-input:checked ~ .form-check-label:before {
-    color: #007bff;
+  .form-container {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
   }
 
-  .btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
+  .sign-in-container {
+    left: 0;
+    width: 50%;
+    z-index: 2;
   }
 
-  .btn-primary:hover {
-    background-color: #0069d9;
-    border-color: #0062cc;
+  .container.right-panel-active .sign-in-container {
+    transform: translateX(100%);
   }
 
-  .btn-primary:focus {
-    box-shadow: none;
+  .sign-up-container {
+    left: 0;
+    width: 50%;
+    opacity: 0;
+    z-index: 1;
   }
 
-  .btn-primary:active {
-    background-color: #0062cc;
-    border-color: #005cbf;
+  .container.right-panel-active .sign-up-container {
+    transform: translateX(100%);
+    opacity: 1;
+    z-index: 5;
+    animation: show 0.6s;
   }
 
+  @keyframes show {
+    0%, 49.99% {
+      opacity: 0;
+      z-index: 1;
+    }
+
+    50%, 100% {
+      opacity: 1;
+      z-index: 5;
+    }
+  }
+
+  .overlay-container {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    transition: transform 0.6s ease-in-out;
+    z-index: 100;
+  }
+
+  .container.right-panel-active .overlay-container {
+    transform: translateX(-100%);
+  }
+
+  .overlay {
+    background: #FF416C;
+    background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
+    background: linear-gradient(to right, #FF4B2B, #FF416C);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 0;
+    color: #FFFFFF;
+    position: relative;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
+  }
+
+  .container.right-panel-active .overlay {
+    transform: translateX(50%);
+  }
+
+  .overlay-panel {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    top: 0;
+    height: 100%;
+    width: 50%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
+  }
+
+  .overlay-left {
+    transform: translateX(-20%);
+  }
+
+  .container.right-panel-active .overlay-left {
+    transform: translateX(0);
+  }
+
+  .overlay-right {
+    right: 0;
+    transform: translateX(0);
+  }
+
+  .container.right-panel-active .overlay-right {
+    transform: translateX(20%);
+  }
+
+  footer {
+    background-color: #222;
+    color: #fff;
+    font-size: 14px;
+    bottom: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 999;
+  }
+
+  footer p {
+    margin: 10px 0;
+  }
+
+  footer i {
+    color: red;
+  }
+
+  footer a {
+    color: #3C97BF;
+    text-decoration: none;
+  }
 </style>
 </head>
 <body>
-<div class="">
-  <a href="/neticket">
-    <img src="/images/logo2.png" alt="NETicket"
-         style="width: 150px; object-fit: contain; margin-top: 30px; margin-left: 70px;">
-  </a>
-  <div id="wrap">
-    <div id="login-form">
-      <form>
-        <legend>회원가입</legend>
-        <div class="mb-3">
-          <label class="form-label">이메일</label>
-          <input type="text" id="email" class="form-control" placeholder="이메일 주소를 입력해주세요.">
-        </div>
-        <div class="mb-3">
-          <label class="form-label">비밀번호</label>
-          <div class="input-group">
-            <input type="password" id="password" class="form-control" placeholder="비밀번호를 입력해주세요.">
-          </div>
-        </div>
-        <div class="mb-3">
-          <label class="form-label">비밀번호 확인</label>
-          <div class="input-group">
-            <input type="password" id="passwordCheck" class="form-control"
-                   placeholder="비밀번호를 한번 더 입력해주세요.">
-          </div>
-        </div>
-        <div class="mb-3">
-          <label class="form-label">닉네임</label>
-          <input type="text" id="nickname" class="form-control" placeholder="닉네임을 입력해주세요.">
-        </div>
-
-        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-          <a href="/neticket/login">
-            <button type="button" class="btn btn-warning" id="loginpage">로그인</button>
-          </a>
-          <button type="button" class="btn btn-primary me-2" id="signup-btn">회원가입</button>
-        </div>
-      </form>
+<a href="/neticket">
+  <img src="/images/logo2.png" alt="NETicket"
+       style="width: 150px; object-fit: contain; margin-bottom: 30px; marmargin-left: 70px;">
+</a>
+<div class="container" id="container">
+  <div class="form-container sign-up-container">
+    <form action="#">
+      <h1>Create Account</h1>
+      <span>or use your email for registration</span>
+      <input type="email" id="email" class="form-control" placeholder="이메일 주소를 입력해주세요.">
+      <div class="input-group">
+        <input type="password" id="password" class="form-control" placeholder="비밀번호를 입력해주세요.">
+      </div>
+      <div class="input-group">
+        <input type="password" id="passwordCheck" class="form-control"
+               placeholder="비밀번호를 한번 더 입력해주세요.">
+      </div>
+      <input type="text" id="nickname" class="form-control" placeholder="닉네임을 입력해주세요.">
+      <button type="button" id="signup-btn">Sign Up</button>
+    </form>
+  </div>
+  <div class="form-container sign-in-container">
+    <form action="#">
+      <h1>Sign in</h1>
+      <span>or use your account</span>
+      <input type="email" class="form-control" id="login_email" aria-describedby="emailHelp"
+             placeholder="이메일">
+      <input type="password" class="form-control" id="login_password" placeholder="비밀번호">
+      <button type="button" onclick="login()">Sign In</button>
+    </form>
+  </div>
+  <div class="overlay-container">
+    <div class="overlay">
+      <div class="overlay-panel overlay-left">
+        <h1>Welcome Back!</h1>
+        <p>To keep connected with us please login with your personal info</p>
+        <button class="ghost" id="signIn">Sign In</button>
+      </div>
+      <div class="overlay-panel overlay-right">
+        <h1>Hello, Friend!</h1>
+        <p>Enter your personal details and start journey with us</p>
+        <button class="ghost" id="signUp">Sign Up</button>
+      </div>
     </div>
   </div>
-
 </div>
+
+
 </body>
+
+<SCRIPT>
+  const signUpButton = document.getElementById('signUp');
+  const signInButton = document.getElementById('signIn');
+  const container = document.getElementById('container');
+
+  signUpButton.addEventListener('click', () => {
+    container.classList.add("right-panel-active");
+  });
+
+  signInButton.addEventListener('click', () => {
+    container.classList.remove("right-panel-active");
+  });
+</SCRIPT>
 </html>
