Feat : signup.html 수정 (css 디자인 개선)
signup.html 수정 (css 디자인 개선)

Resolves : #69

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -246,7 +246,7 @@
   <img src="/images/logo2.png" alt="NETicket"
        style="width: 150px; object-fit: contain; margin-bottom: 30px; marmargin-left: 70px;">
 </a>
-<div class="container" id="container">
+<div class="container right-panel-active" id="container">
   <div class="form-container sign-up-container">
     <form action="#">
       <h1>Create Account</h1>
@@ -256,8 +256,7 @@
         <input type="password" id="password" class="form-control" placeholder="비밀번호를 입력해주세요.">
       </div>
       <div class="input-group">
-        <input type="password" id="passwordCheck" class="form-control"
-               placeholder="비밀번호를 한번 더 입력해주세요.">
+        <input type="password" id="passwordCheck" class="form-control" placeholder="비밀번호를 한번 더 입력해주세요.">
       </div>
       <input type="text" id="nickname" class="form-control" placeholder="닉네임을 입력해주세요.">
       <button type="button" id="signup-btn">Sign Up</button>
@@ -267,8 +266,7 @@
     <form action="#">
       <h1>Sign in</h1>
       <span>or use your account</span>
-      <input type="email" class="form-control" id="login_email" aria-describedby="emailHelp"
-             placeholder="이메일">
+      <input type="email" class="form-control" id="login_email" aria-describedby="emailHelp" placeholder="이메일">
       <input type="password" class="form-control" id="login_password" placeholder="비밀번호">
       <button type="button" onclick="login()">Sign In</button>
     </form>
@@ -288,7 +286,6 @@
     </div>
   </div>
 </div>
-
 
 </body>
 
