--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -10,6 +10,7 @@
   <div class="card-container">
   </div>
 </div>
+<div th:replace="footer :: footer"></div>
 </body>
 <script>
   $(document).ready(function () {
