--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -53,10 +53,10 @@ body {
   cursor: pointer;
 }
 
-footer {
+.page {
   display: flex;
   justify-content: center;
-  margin-top: 100px;
+  margin-top: 70px;
 }
 
 .info {
@@ -132,11 +132,6 @@ footer {
   cursor: pointer;
   font-size: 15px;
   width: 100%;
-}
-
-.footerContainer p {
-  margin: 0;
-  color: #999;
 }
 
 .main .image-container {
@@ -417,7 +412,7 @@ section.infoSection {
 }
 
 .property-card:hover .property-social-icons:hover {
-  background-color: blue;
+  background-color: #ec4a4a;
   cursor: pointer;
 }
 
@@ -467,4 +462,73 @@ h3 {
   margin-top: 20px;
   margin-left: 70px;
 }
+
+.common_footer {
+  background-color: #f5f5f5ad;
+  color: #6f6f6f;
+  font-size: 17px;
+  padding: 30px 0;
+}
+
+.footer_menu {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.footer_menu_list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer_menu_item {
+  margin-right: 15px;
+}
+
+.footer_menu_link {
+  color: #6f6f6f;
+  text-decoration: none;
+}
+
+.footer_inner {
+  text-align: center;
+}
+
+.footer_corp_title {
+  display: block;
+  font-size: 23px;
+  color: #6f6f6f;
+  margin-bottom: 10px;
+}
+
+.footer_address {
+  line-height: 1.5;
+}
+
+.footer_address_item {
+  display: inline;
+  margin-right: 10px;
+}
+
+.btn_hyperlink {
+  color: #6f6f6f;
+  text-decoration: underline;
+}
+
+.footer_copyright {
+  display: block;
+  margin-top: 10px;
+}
+
+.footer_etc {
+  margin-top: 10px;
+}
+
+
+
+
+
 
