--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -54,7 +54,7 @@
     </div>
   </div>
 </section>
-
+<div th:replace="footer :: footer"></div>
 </body>
 <script>
   $(document).ready(function () {
