--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -9,7 +9,7 @@
 <div id="event_box" class="row"
      style="margin-left: 50px; margin-top: 50px; margin-right: 20px"></div>
 
-<footer>
+<div class="page">
   <nav aria-label="Page navigation example" class="justify-content-center">
     <ul class="pagination">
       <li class="page-item">
@@ -27,7 +27,7 @@
       </li>
     </ul>
   </nav>
-</footer>
+</div>
 </body>
 <script>
   $(document).ready(function () {
