Design: 전체 반응형 웹사이트로 변경
Related to: #69

--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -6,10 +6,8 @@
 <section class="py-5">
   <div class="container px-4 px-lg-5 my-5">
     <div class="row gx-4 gx-lg-5 align-items-start">
-      <div class="col-md-6">
-        <div class="image-container">
-          <img class="image" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt=""/>
-        </div>
+      <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0 image"
+                                 src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..."/>
       </div>
       <div class="col-md-6">
         <h5 class="reservation-header">예매완료</h5>
