--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -5,13 +5,16 @@ body {
   color: #000;
   height: 100%;
   background-color: #f5f5f5ad; /* 배경색 변경 */
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 10px;
 }
 
-.row {
-  margin-top: 30px;
-
+.col {
+  flex: 1 0 0%;
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 10px;
 }
 
 .card-img-top {
@@ -31,6 +34,9 @@ body {
 
 .search-container {
   display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  margin-top: 100px;
 }
 
 .search-container input[type="text"] {
@@ -61,7 +67,7 @@ body {
 
 .info {
   margin-top: 0; /* 위쪽 마진을 없애기 위해 변경 */
-  width: 600px; /* 가로 크기 고정 */
+  width: 100%; /* 가로 크기 고정 */
   padding: 20px;
   border-radius: 20px;
   background-color: #ffffff;
@@ -89,12 +95,22 @@ body {
 }
 
 .info strong {
-  width: 200px;
   display: inline-block;
 }
 
 .info li {
   margin-bottom: 12px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.info li strong, .info li div {
+  display: flex;
+  justify-content: space-between;
+}
+
+.info li div {
+  float: right;
 }
 
 .nav-link {
@@ -155,6 +171,7 @@ body {
   margin-top: 50px;
   margin-left: 50px;
   margin-right: 50px;
+  flex-direction: column-reverse;
 }
 
 .category-container {
@@ -181,11 +198,18 @@ body {
   grid-gap: 20px;
 }
 
+/*.card-wrapper {*/
+/*  display: grid;*/
+/*  grid-template-columns: repeat(2, 1fr);*/
+/*  grid-gap: 20px;*/
+/*}*/
+
 .card-wrapper {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   grid-gap: 20px;
 }
+
 
 #eventForm {
   background-color: white;
@@ -374,7 +398,7 @@ section.infoSection {
 .property-description {
   background-color: #FAFAFC;
   height: 12em;
-  width: 14em;
+  width: 100%;
   position: absolute;
   bottom: 0em;
   -webkit-transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
