--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -29,7 +29,9 @@
   <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
   <script type="text/javascript" th:src="@{/js/basic.js}"></script>
 
-  <title>페이지</title>
+  <title>NETicket</title>
+  <link rel="shortcut icon" href="/images/logo2.png" type="image/x-icon">
+  <link rel="icon" href="/images/logo2.png" type="image/x-icon">
 </head>
 <body>
 </body>
