--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -7,12 +7,8 @@
 <section class="py-5">
   <div class="container px-4 px-lg-5 my-5">
     <div class="row gx-4 gx-lg-5 align-items-start">
-      <div class="col-md-6">
-        <div class="image-container">
-          <img class="card-img-top mb-5 mb-md-0 image"
-               src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..." width="100%"
-               height="70%"/>
-        </div>
+      <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0 image"
+                                 src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..."/>
       </div>
       <div class="col-md-6">
         <h5 class="infoDesc id" style="overflow: hidden"></h5>
