--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -66,12 +66,13 @@ body {
 }
 
 .info {
-  margin-top: 0; /* 위쪽 마진을 없애기 위해 변경 */
-  width: 100%; /* 가로 크기 고정 */
+  width: 100%;
   padding: 20px;
   border-radius: 20px;
   background-color: #ffffff;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 그림자 추가 */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  max-width: 800px;
+  margin: auto;
 }
 
 
@@ -98,25 +99,26 @@ body {
   display: inline-block;
 }
 
-.info li {
-  margin-bottom: 12px;
-  display: flex;
-  justify-content: space-between;
+.infoLabel{
+  height: 100%;
 }
 
-.info li strong, .info li div {
+.info li {
+  margin-bottom: 1em;
   display: flex;
   justify-content: space-between;
+  align-items: stretch;
 }
 
 .info li div {
   float: right;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav-link {
-  font-size: 17px;
+  font-size: 20px;
 }
-
 
 .productWrapper .summary .info {
   display: inline-block;
@@ -198,18 +200,14 @@ body {
   grid-gap: 20px;
 }
 
-/*.card-wrapper {*/
-/*  display: grid;*/
-/*  grid-template-columns: repeat(2, 1fr);*/
-/*  grid-gap: 20px;*/
-/*}*/
-
 .card-wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(370px, 1fr));
+  grid-gap: 30px;
+  width: 100%;
+  margin: 0 auto;
+  justify-content: center;
 }
-
 
 #eventForm {
   background-color: white;
